# voc-cmd

./: .gitignore  LICENSE  README.md  pyproject.toml  voxcmd.py
.github/workflows/: publish.yml
